tests/ui/missing-display.stderr
error[E0277]: `Error` doesn't implement `std::fmt::Display`
 --> $DIR/missing-display.rs:3:10
  |
3 | #[derive(Error, Debug)]
  |          ^^^^^ `Error` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Error`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
